# opus-tools

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
libs/libopusenc/: CMakeLists.txt
libs/libopusenc/src/: opusenc.c
libs/opusfile/: CMakeLists.txt
src/: CMakeLists.txt  opusdec.c  opusenc.c  opusinfo.c  wave_out.c
